infra/k8s/database-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: database-service
  namespace: k8s-lab
spec:
  type: ClusterIP
  selector:
    app: database
  ports:
    - port: 5432
      targetPort: 5432
